# wang

./: .gitignore  LICENSE
wheeldog/: CMakeLists.txt  REALTIME_CONTROL_NOTES.md  build.sh  main.cpp  run.sh  run_mj.sh
wheeldog/Sources/: quardLeg.json  quardLeg_mj.json  robot_state_shm.yaml
wheeldog/description/: motor_absolute_calibration_table.inc  robot_model_config.hpp  wheel_legged_dog_mujoco.xml  wheel_legged_dog_rough_mujoco.xml
wheeldog/interface/: CMakeLists.txt
wheeldog/interface/robot/: robot_interface.h
wheeldog/interface/robot/hal/: imu_hal.hpp  motor_hal.hpp
wheeldog/interface/robot/hardware/: hipnuc_imu_hal.cpp  hipnuc_imu_hal.hpp  motor_bridge_shared.hpp  wheeled_dog_hardware_interface.cpp  wheeled_dog_hardware_interface.hpp  wheeled_dog_hardware_interface_stub.hpp
wheeldog/interface/robot/simulation/: MUJOCO_LOG.TXT  mjmodel.xml  mujoco_interface.hpp  mujoco_simulation.py
wheeldog/interface/user_command/: keyboard_interface.hpp  retroid_gamepad_interface.hpp  skydroid_gamepad_interface.hpp  user_command_interface.h
wheeldog/run_policy/: Mydog_test_policy_runner_onnx.hpp  policy_runner_base.hpp
wheeldog/share/: quardLeg_defines.cc  quardLeg_defines.h
wheeldog/src_gen/: robot_state_shm.h  robot_state_shm.py
wheeldog/state_machine/: idle_state.hpp  joint_damping_state.hpp  pace_chirp_collect_state.hpp  rl_control_state_onnx.hpp  sitdown_state.hpp  standup_state.hpp  state_base.h  state_machine.hpp
wheeldog/tests/: test_deployment_timing_config.py  test_motor_constants.py  test_read_all_motor_angles.py  test_wd_mcu_bridge_integration.py  test_wd_mcu_stack.py
wheeldog/tools/: read_all_motor_angles.py  verify_all_can_joint_mapping.py  wd_mcu_dryrun.py
wheeldog/types/: common_types.h  custom_types.h
wheeldog/utils/: IMU_TEST_RESULT.md  IMU_USAGE.md  build_imu_mapping_check.sh  check_nmea  check_nmea.cpp  check_sync  check_sync.cpp  convert_urdf_to_mjcf.py  data_streaming.hpp  imu_debug_tool  imu_debug_tool.cpp  imu_frame_check  imu_frame_check.cpp  imu_mapping_check  imu_mapping_check.cpp  (+1 more)
(+85 files in other folders)
